--- a/postgres/docker-compose.yml
+++ b/postgres/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3.5"
 services:
   postgres:
-    image: postgres
+    image: postgres:12.0-alpine
     environment:
       POSTGRES_PASSWORD: "1234"
       POSTGRES_DB: test_db
